fixed container alignment responsively.

--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,6 @@
   min-height: 830px;
   background-color: #E5E5E5;
 }
+html, body {
+  height: 100%;
+}
